--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,20 @@
 title: "Avital's GH actions test repo"
 description: "Site to test setting up GH actions and Jekyll from scratch"
+repository: apinnick/gh-actions-test
+repository_name: gh-actions-test
+repository_url: apinnick/gh-actions-test
+baseurl: /gh-actions-test/
+docdir: documentation
 type: website
 
 # Build settings
 markdown: kramdown
+
+asciidoctor:
+  attributes:
+  - showtitle=@
+  # base_dir: :docdir
+  safe: unsafe
 
 kramdown:
   input: GFM
@@ -14,3 +25,9 @@ kramdown:
     block:
       line_numbers: false
       start_line: 1
+
+plugins: [jekyll-asciidoc, jekyll-paginate, jekyll-redirect-from, jekyll-feed, jekyll-sitemap, premonition, jekyll/tagging, jekyll-seo-tag]
+
+exclude:
+  - README.md
+  - vendor
